--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </section>
 
         <aside id="sidebar">
-          <a href="#"><img src="http://developer.android.com/images/brand/en_app_rgb_wo_60.png" /></a>
+          <center><a href="#"><img src="http://developer.android.com/images/brand/en_app_rgb_wo_60.png" /></a></center>
         
           <a href="https://github.com/nicatronTg/MinerCon/zipball/master" class="button">
             <small>Download</small>
