--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
         </section>
 
         <aside id="sidebar">
-          <center><a href="#"><img src="http://developer.android.com/images/brand/en_app_rgb_wo_60.png" /></a></center>
+          <a href="#" class="button">
+            <small>Download</small>
+            on Google Play
+          </a>
         
           <a href="https://github.com/nicatronTg/MinerCon/zipball/master" class="button">
             <small>Download</small>
