--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Minercon by nicatronTg</title>
+    <title>MinerCon by nicatronTg</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Minercon</h1>
+        <h1>MinerCon</h1>
         <h2>Open source Minecraft RCON client for Android.</h2>
         <a href="https://github.com/nicatronTg/MinerCon" class="button"><small>View project on</small>GitHub</a>
       </div>
