--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
           <center><a href="#"><img src="http://developer.android.com/images/brand/en_app_rgb_wo_60.png" /></a></center><br />
         
           <a href="https://github.com/nicatronTg/MinerCon/zipball/master" class="button">
-            <small>Download</small>
+            <small>Download Source</small>
             .zip file
           </a>
           <a href="https://github.com/nicatronTg/MinerCon/tarball/master" class="button">
-            <small>Download</small>
+            <small>Download Source</small>
             .tar.gz file
           </a>
 
